# ocaml-lzma_7z

./: .gitignore  README.md  dune  lzma.ml  lzma_7z.opam
7zip/: Makefile
7zip/Util/Lzma/: LzmaUtil.c
