(library
(name lzma_7z)
 (public_name lzma_7z)
 (wrapped false)
 (preprocess (pps ppx_cstruct ppx_deriving.std))
 (libraries core ctypes ctypes.foreign lwt lwt.unix)
 (c_library_flags (:standard -Wl,--no-as-needed -lz -lm -pthread))
 (library_flags (-cclib -Wl,-E) (-cclib -Wl,--no-as-needed))
 (self_build_stubs_archive (lzma_7z))
 )
(ignored_subdirs (7zip))
(rule
  (deps (source_tree 7zip))
  (targets liblzma_7z.a liblzma_7z.so)
  (action (progn
	  (chdir 7zip (run make clean))
	  (chdir 7zip (run make liblzma_7z.a))
	  (chdir 7zip (run make liblzma_7z.so))
  )))
(rule
  (deps (source_tree 7zip))
  (targets liblzma_7z_stubs.a dlllzma_7z_stubs.so)
  (action (progn
	  (copy 7zip/liblzma_7z.a liblzma_7z_stubs.a)
	  (copy 7zip/liblzma_7z.so dlllzma_7z_stubs.so)
	  (chdir 7zip (run make clean))
  )))
