(library
(name lzma_7z)
 (public_name lzma_7z)
 (wrapped false)
 (preprocess (pps ppx_cstruct ppx_deriving.std))
 (libraries core ctypes ctypes.foreign lwt lwt.unix logs logs.fmt logs.lwt)
 (c_library_flags (:standard -Wl,--no-as-needed -lz -lm -pthread))
 (library_flags (-cclib -Wl,-E) (-cclib -Wl,--no-as-needed))
 (foreign_archives lzma_7z)
 )
(data_only_dirs 7zip)
(rule
  (deps (source_tree 7zip))
  (targets liblzma_7z.a dlllzma_7z.so)
  (action (progn
	  (chdir 7zip (run make clean))
	  (chdir 7zip (run make liblzma_7z.a))
	  (chdir 7zip (run make liblzma_7z.so))
	  (copy 7zip/liblzma_7z.a liblzma_7z.a)
	  (copy 7zip/liblzma_7z.so dlllzma_7z.so)
	  (chdir 7zip (run make clean))
  )))
